# cython-package-build-example

./: .gitignore  LICENSE  README.rst  bump_version.py  clear_build_files.py  pyproject.toml  setup.py
.github/workflows/: build-sdist.yaml  build-wheels.yaml  build.yaml
src/cython_package_build_example/: __init__.py
